@@ -301,6 +301,9 @@ Release 2.6.0 - UNRELEASED
     HDFS-6597. Add a new option to NN upgrade to terminate the process after
     upgrade on NN is completed. (Danilo Vunjak via cnauroth)
 
+    HDFS-6700. BlockPlacementPolicy shoud choose storage but not datanode for
+    deletion. (szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-6690. Deduplicate xattr names in memory. (wang)
